Restricted method accesses. Private methods with a single usage moved below their callers